--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ homepage = "https://github.com/dmitmel/place145"
 
 [dependencies]
 actix = "0.7"
+actix_derive = "*"
 actix-web = "0.7"
 env_logger = "*"
 log = "*"
 serde = "1.0"
 serde_derive = "1.0"
+futures = "*"
