--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ actix = "0.7"
 actix_derive = "*"
 actix-web = "0.7"
 env_logger = "*"
+futures = "*"
 log = "*"
 serde = "1.0"
 serde_derive = "1.0"
-futures = "*"
+serde_json = "1.0.33"
