use websockets instead of REST API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://github.com/dmitmel/place145"
 actix = "0.7"
 actix_derive = "*"
 actix-web = "0.7"
+byteorder = "1.2.7"
 env_logger = "*"
 futures = "*"
 log = "*"
