--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,9 @@ homepage = "https://github.com/dmitmel/place145"
 actix = "0.7"
 actix_derive = "*"
 actix-web = "0.7"
-byteorder = "1.2.7"
+bincode = "1.0.1"
 env_logger = "*"
 futures = "*"
 log = "*"
 serde = "1.0"
 serde_derive = "1.0"
-serde_json = "1.0.33"
