--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "server": {
-    "address": "0.0.0.0:8080"
+    "address": "0.0.0.0:8080",
+    "static_files": "frontend/build"
   },
   "canvas": {
     "width": 64,
