--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,7 @@ repository = "https://github.com/dmitmel/place145.git"
 homepage = "https://github.com/dmitmel/place145"
 
 [dependencies]
-actix = "0.7"
 actix_derive = "*"
-actix-web = "0.7"
 bincode = "1.0"
 env_logger = "*"
 failure = "*"
@@ -21,3 +19,12 @@ log = "*"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "*"
+
+[dependencies.actix]
+version = "0.7"
+default-features = false
+features = ["signal"]
+
+[dependencies.actix-web]
+version = "0.7"
+default-features = false
