--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 **/*.rs.bk
 
 /canvas.bin
+
+/frontend/build
+/frontend/node_modules
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
