--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,51 +4,40 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "NODE_ENV=production webpack --progress",
-    "start": "NODE_ENV=development webpack-dev-server --progress"
+    "build": "webpack build --mode=production",
+    "start": "webpack serve --mode=development --hot"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.2.0",
-    "@types/node": "^10.12.12",
-    "@webpack-blocks/assets": "next",
-    "@webpack-blocks/babel": "next",
-    "@webpack-blocks/core": "next",
-    "@webpack-blocks/dev-server": "next",
-    "@webpack-blocks/eslint": "next",
-    "@webpack-blocks/webpack": "next",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.10.0",
-    "eslint-config-dmitmel": "^3.0.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "html-webpack-plugin": "^4.0.0-beta.5",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "sass-loader": "^7.1.0",
-    "terser-webpack-plugin": "^1.1.0",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
-  },
-  "resolutions": {
-    "@webpack-blocks/assets/css-loader": "^2.0.0",
-    "@webpack-blocks/assets/file-loader": "^2.0.0",
-    "@webpack-blocks/assets/style-loader": "^0.23.1",
-    "@webpack-blocks/assets/url-loader": "^1.1.2",
-    "@webpack-blocks/babel/babel-loader": "^8.0.4",
-    "@webpack-blocks/dev-server/webpack-dev-server": "^3.1.10",
-    "@webpack-blocks/eslint/eslint-loader": "^2.0.0"
+    "@babel/core": "^7.13.16",
+    "@babel/eslint-parser": "^7.13.14",
+    "@babel/eslint-plugin": "^7.13.16",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/runtime": "^7.13.17",
+    "@types/node": "^14.14.41",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.4",
+    "css-minimizer-webpack-plugin": "^2.0.0",
+    "eslint": "^7.24.0",
+    "eslint-config-dmitmel": "dmitmel/eslint-config-dmitmel",
+    "eslint-webpack-plugin": "^2.5.4",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.5.0",
+    "sass": "^1.32.11",
+    "sass-loader": "^11.0.1",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.35.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
