--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,4 +57,6 @@ jobs:
       - run: cargo clippy --verbose --workspace
 
       - run: yarn install --frozen-lockfile
+        working-directory: frontend
       - run: yarn run build
+        working-directory: frontend
