--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,33 +11,36 @@
     "buffer": "^6.0.3",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/eslint-parser": "^7.13.14",
+    "@babel/core": "^7.14.3",
+    "@babel/eslint-parser": "^7.14.3",
     "@babel/eslint-plugin": "^7.13.16",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
-    "@babel/runtime": "^7.13.17",
-    "@types/node": "^14.14.41",
+    "@babel/runtime": "^7.14.0",
+    "@types/node": "^15.6.1",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^5.2.4",
-    "css-minimizer-webpack-plugin": "^2.0.0",
-    "eslint": "^7.24.0",
+    "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.0",
+    "eslint": "^7.27.0",
     "eslint-config-dmitmel": "dmitmel/eslint-config-dmitmel",
     "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^1.5.0",
-    "sass": "^1.32.11",
-    "sass-loader": "^11.0.1",
-    "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.35.0",
-    "webpack-cli": "^4.6.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "sass": "^1.34.0",
+    "sass-loader": "^11.1.1",
+    "terser-webpack-plugin": "^5.1.2",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "resolutions": {
+    "multicast-dns": "7.2.3"
   }
 }
